pe/3.8/regenerate_certs_console.markdown
---
layout: default
title: "PE 3.8 » Security and SSL"
subtitle: "Regenerating Certs for the PE Console"
canonical: "/pe/latest/regenerate_certs_console.html"
---


The major components of Puppet Enterprise (the Puppet master, PuppetDB, and PE console) contain SSL certificates and security credentials (private and public keys) that are generated by PE’s built-in certificate authority (CA). The following document provides instructions on regenerating the cert and security credentials for the PE console.

Regenerating certificates and security credentials for the PE console involves the following steps:

1. Back up SSL directories on the PE console server
2. Shut down all PE-related services on the PE console server
3. Clear and regenerate the Puppet agent certs for the PE console server
4. Clear and regenerate the certs for pe-internal-classifier and pe-internal-dashboard
4. Copy the new certs and security credentials to the appropriate PE console and services directories and set permissions
5. Restart all PE-related services on the PE console server

>**Important**: This document applies to the certs and security credentials for the **PE console server only**. If you've experienced an unforeseen security vulnerability and need to regenerate all the certificates and security credentials in your infrastructure, refer to [Regenerating Certs and Security Credentials in Split Puppet Enterprise Deployments](./trouble_regenerate_certs_split.html) for complete instructions.
>
>In addition, this guide also applies to split installations only. On monolithic installs, PuppetDB shares an agent cert and security credentials with the Puppet master and the PE console. For a [monolithic install](./trouble_regenerate_certs_split.html), you must regenerate all certs and security credentials.

## Clear and Regenerate Certs for the PE Console

**To clear and regenerate certs on your PE console server**:

>**Notes**:
>
>- You must be logged in as a root, (or in the case of Windows agents, as an account with Administrator Privileges) to make these changes.
>
> - If you encounter any errors during steps that involve `service stop/start`, `rm`, `cp`, or `chmod` commands, you should diagnose these before continuing, as the success each step is very important to the success of the next step.
>
> - In the following instructions, when `<CERTNAME>` is used, it refers to the Puppet agent's certname. To find this value, run `puppet config print certname` before starting. `<CA SERVER HOSTNAME>` refers to the server that is your certificate authority---depending on your PE configuration, this may or may not be the Puppet master.
>
> - Unless otherwise indicated, all commands are run on the PE console server.

1. Back up the following directories:

   * `/etc/puppetlabs/puppet/ssl/`

   * `/opt/puppet/share/puppet-dashboard/certs`

   * `/opt/puppet/share/console-services/certs`

2. Shut down all PE-related services with the following commands:

        puppet resource service pe-puppet ensure=stopped
        puppet resource service pe-console-services ensure=stopped
        puppet resource service pe-httpd ensure=stopped
        puppet resource service pe-mcollective ensure=stopped

3. Delete the Puppet agent's SSL cert and security credentials from the PE console node.

    `rm -rf /etc/puppetlabs/puppet/ssl/*`

4. **On the Puppet master, or CA server**, remove the cert for the PE console node.

    `puppet cert clean <CERTNAME>`

5. Generate security credentials and request a new certificate from the CA Puppet master. These certs will end up in `/etc/puppetlabs/puppet/ssl`.

   `puppet agent --test --no-daemonize --noop`

   > **Note**: This agent run will not complete successfully, but it is necessary to set up the agent certificate for the node. You will see some errors about node definition and the inability to execute http requests due to the console being offline. You can ignore these.

6. **On the Puppet master, or CA server**, remove the certs for the pe-internal-classifier and pe-internal-dashboard.

        puppet cert clean pe-internal-classifier
        puppet cert clean pe-internal-dashboard

7. Create the pe-internal-classifier and pe-internal-dashboard certs.

   >**Note**: The expected output of the `puppet certificate generate` command is `true`

        puppet certificate generate pe-internal-classifier --ca-location remote --ca_server <CA SERVER HOSTNAME>
        puppet certificate find pe-internal-classifier --ca-location remote --ca_server <CA SERVER HOSTNAME>
        puppet certificate generate pe-internal-dashboard --ca-location remote --ca_server <CA SERVER HOSTNAME>
        puppet certificate find pe-internal-dashboard --ca-location remote --ca_server <CA SERVER HOSTNAME>

8. Purge the console-services and puppet-dashboard certs directory.

        rm -rf /opt/puppet/share/console-services/certs/*
        rm -rf /opt/puppet/share/puppet-dashboard/certs/*

9. Copy the Puppet agent's cert and security credentials to the console-services cert directory.

        cp /etc/puppetlabs/puppet/ssl/certs/<CERTNAME>.pem /opt/puppet/share/console-services/certs/<CERTNAME>.cert.pem
        cp /etc/puppetlabs/puppet/ssl/public_keys/<CERTNAME>.pem /opt/puppet/share/console-services/certs/<CERTNAME>.public_key.pem
        cp /etc/puppetlabs/puppet/ssl/private_keys/<CERTNAME>.pem /opt/puppet/share/console-services/certs/<CERTNAME>.private_key.pem

10. Copy the pe-internal-classifier cert and security credentials to the console-services cert directory.

        cp /etc/puppetlabs/puppet/ssl/certs/pe-internal-classifier.pem /opt/puppet/share/console-services/certs/pe-internal-classifier.cert.pem
        cp /etc/puppetlabs/puppet/ssl/public_keys/pe-internal-classifier.pem /opt/puppet/share/console-services/certs/pe-internal-classifier.public_key.pem
        cp /etc/puppetlabs/puppet/ssl/private_keys/pe-internal-classifier.pem /opt/puppet/share/console-services/certs/pe-internal-classifier.private_key.pem

11. Copy the pe-internal-dashboard cert and security credentials to the console-services cert directory.

        cp /etc/puppetlabs/puppet/ssl/certs/pe-internal-dashboard.pem /opt/puppet/share/console-services/certs/pe-internal-dashboard.cert.pem
        cp /etc/puppetlabs/puppet/ssl/public_keys/pe-internal-dashboard.pem /opt/puppet/share/console-services/certs/pe-internal-dashboard.public_key.pem
        cp /etc/puppetlabs/puppet/ssl/private_keys/pe-internal-dashboard.pem /opt/puppet/share/console-services/certs/pe-internal-dashboard.private_key.pem

12. Ensure the PE console can access the new credentials.

    `chown -R pe-console-services:pe-console-services /opt/puppet/share/console-services/certs`

13. Copy the Puppet agent's cert and security credentials to the puppet-dashboard cert directory.

        cp /etc/puppetlabs/puppet/ssl/certs/<CERTNAME>.pem /opt/puppet/share/puppet-dashboard/certs/<CERTNAME>.cert.pem
        cp /etc/puppetlabs/puppet/ssl/public_keys/<CERTNAME>.pem /opt/puppet/share/puppet-dashboard/certs/<CERTNAME>.public_key.pem
        cp /etc/puppetlabs/puppet/ssl/private_keys/<CERTNAME>.pem /opt/puppet/share/puppet-dashboard/certs/<CERTNAME>.private_key.pem

14. Copy the pe-internal-dashboard cert and security credentials to the puppet-dashboard cert directory.

        cp /etc/puppetlabs/puppet/ssl/certs/pe-internal-dashboard.pem /opt/puppet/share/puppet-dashboard/certs/pe-internal-dashboard.cert.pem
        cp /etc/puppetlabs/puppet/ssl/public_keys/pe-internal-dashboard.pem /opt/puppet/share/puppet-dashboard/certs/pe-internal-dashboard.public_key.pem
        cp /etc/puppetlabs/puppet/ssl/private_keys/pe-internal-dashboard.pem /opt/puppet/share/puppet-dashboard/certs/pe-internal-dashboard.private_key.pem

15. Copy the Diffie-Hellman (DH) param files into place.

        cp /opt/puppet/share/puppet/modules/puppet_enterprise/files/console/dhparam_puppetproxy.pem /opt/puppet/share/puppet-dashboard/certs/dhparam_puppetproxy_cert.pem
        cp /opt/puppet/share/puppet/modules/puppet_enterprise/files/console/dhparam_puppetdashboard.pem /opt/puppet/share/puppet-dashboard/certs/dhparam_puppetdashboard_cert.pem
        
    >**Note**: If you want to regenerate the DH param files, see [Configuring the PE Console to Use a Custom Diffie-Hellman File](./trouble_dh_generate.html), which contains instructions on regenerating files. You will need to delete any DH param files that are in place before regenerating them. You should regenerate the DH param files **AFTER** you've completed step 17 (restart PE services). 

16. Ensure the PE console can access the new credentials.

    `chown -R puppet-dashboard:puppet-dashboard /opt/puppet/share/puppet-dashboard/certs`

17. Restart all PE-related services with the following commands:

        puppet resource service pe-puppet ensure=running
        puppet resource service pe-httpd ensure=running
        puppet resource service pe-console-services ensure=running
        puppet resource service pe-mcollective ensure=running
